// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button: color variants: should render default button 1`] = `
<button
  className="root"
  disabled={false}
>
  SEEK
</button>
`;

exports[`Button: color variants: should render primary button 1`] = `
<button
  className="root"
  disabled={false}
>
  SEEK
</button>
`;

exports[`Button: color variants: should render success button 1`] = `
<button
  className="root undefined"
  disabled={false}
>
  SEEK
</button>
`;

exports[`Button: color variants: should render transparent button 1`] = `
<button
  className="root root_isTransparent"
  disabled={false}
>
  SEEK
</button>
`;

exports[`Button: should render as an anchor with href="https://www.seek.com.au" 1`] = `
<a
  className="root"
  disabled={false}
  href="https://www.seek.com.au"
>
  SEEK
</a>
`;

exports[`Button: should render as loading 1`] = `
<button
  className="root loading"
  disabled={true}
>
  SEEK
</button>
`;

exports[`Button: should render custom component based on it’s reference 1`] = `
<CustomComponent
  className="root"
  disabled={false}
>
  SEEK
</CustomComponent>
`;

exports[`Button: should render fullwidth button 1`] = `
<button
  className="root fullWidth root_isTransparent"
  disabled={false}
>
  SEEK
</button>
`;

exports[`Button: should render with array of nodes 1`] = `
<button
  className="root"
  disabled={false}
>
  <span>
    SEEK
  </span>
  <span>
    AU
  </span>
</button>
`;

exports[`Button: should render with className 1`] = `
<button
  className="root foo undefined"
  disabled={false}
>
  SEEK
</button>
`;

exports[`Button: should render with node 1`] = `
<button
  className="root"
  disabled={false}
>
  <h5>
    SEEK
  </h5>
</button>
`;
